--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular5-flash-messages": "^0.2.0",
     "bootstrap": "^3.3.6",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
